--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "php": ">=5.3.0",
         "illuminate/support": "4.x",
         "illuminate/translation": "4.x",
-        "illuminate/database": "4.x",
-        "waavi/model": "1.0"
+        "illuminate/database": "4.x"
     },
     "autoload": {
         "classmap": [
